[package]
name = "evilrng"
version = "0.1.0"
edition = "2018"
authors = ["Matthias Kaak <m.kaak@protonmail.ch>"]
license = "GPL-3.0-or-later"
description = "Unsecure random number source"
documentation = "https://docs.rs/evilrng"
repository = "https://github.com/zvavybir/evil"
readme = "README.md"
keywords = ["crypto"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evilsha = "0.1.0"
